# ehk

./: .gitignore  .gitmodules  15.lisp  15.pl  README.md
15/: 15.pl  README.md
4clojure/: README.md  TODO  project.clj
advent/2017/: InverseCaptcha.idr
algebra/: PureScriptMonoid.agda  PureScriptMonoid.idr
archive/: ArcadeManao.cpp
arena/: contestapplet.conf  start
category/: Category.idr  js-typeof.js
check/: ChangeLog.md  LICENSE  Main.hs  check.cabal
chicken/: .gitignore  ehk.lambda.boolean.scm  ehk.lambda.norm.scm  ehk.lambda.parens.scm  ehk.lambda.reduce.scm  ehk.lambda.run.scm  ehk.setup  ehk.util.coll.scm
euler/: .gitignore  10.scm  11.lisp  13.scm  14.scm  15.idr  16.idr  18.idr  25.scm  29.idr  43.idr  5.scm  6.scm  67.idr  7.scm  8.scm  9.scm
hackerrank/: .gitignore  biddingtictactoe.cpp  botclean.cpp  botcleanr.cpp  saveprincess.cpp  saveprincess2.cpp  tron.cpp
idris/: BuzzFib.idr  Mockingbird1.lidr  Total.idr  bug1_possibly_not_total.idr  example.idr  isElem.idr  reverseNonEmpty.idr
life-clj/: CHANGELOG.md  README.md  project.clj
logic/: match.ss  proof.ss
moreso/: .gitignore  Main.hs  Main.lhs  Makefile  Moreso.lidr  Reader.v  moreso.cabal  moreso.w  syntax.scm
prolog/: roman.pl
punch22/: .gitignore  ANSWER  README.md  punch22.cpp
quine/: foo.clj
rete/: rete.clj
spoj/: .gitignore
stanford/: .gitignore  47_1.hs
talks/: 1999.key  Avi Lightning Talk.key  Complexity Multipliers 2.key  Scheme.key  TDD- Why We Don't Party Like It's 1999.key  pair-coaching-with-jason.key
ttfp/: sn.tex
wtf/: masterpiece.cpp
(+320 files in other folders)
