name:                check

version:             0.1.0.0
synopsis:            Check an SPOJ (or similar) problem
homepage:            http://github.com/eraserhd/ehk
license:             BSD3
license-file:        LICENSE
author:              Jason Felice
maintainer:          jason.m.felice@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

executable check
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
  default-language:    Haskell2010
